adding fb comment plugin

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-website is under construction!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Khujeana</title>
+</head>
+<body>
+
+    <center>
+
+        <h1>Khujeana.com is under construction!</h1>
+        <p>If you want to say something leave a comment below.</p>
+
+        <!-- Load Facebook SDK for JavaScript -->
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+
+        <!-- Your embedded comments code -->
+        <div class="fb-comments"
+        data-href="https://www.khujeana.com/index.html"
+        data-numposts="10"
+        data-width="500"></div>
+        
+    </center>
+    
+</body>
+</html>
